# afterclass1

./: README.md  pyproject.toml
src/config/: settings.py  urls.py
src/prueba/: views.py
src/prueba/templates/prueba/: index.html
src/templates/: base.html
